# shellflow

./: .gitignore  .rumdl.toml  AGENTS.md  Justfile  README.md  SKILL.md  behave_runner.py  context7.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
examples/: zsh_remote.sh
features/: __init__.py  environment.py  execution_contract.feature  parser.feature  runner.feature  safety_controls.feature
features/steps/: shellflow_steps.py
playbooks/: arch_up.sh  hello.sh  test_mixed_output.sh  test_sequential.sh  test_stdout_stderr.sh
specs/2026-03-13-01-shellflow-runner/: REFINEMENT_SUMMARY.md  design.md  tasks.md
specs/2026-03-13-01-shellflow-runner/features/: config.feature  parser.feature  runner.feature
specs/2026-03-13-01-shellflow-runner/features/steps/: shellflow_steps.py
specs/2026-03-15-01-agent-native-runner/: design.md  tasks.md
specs/2026-03-15-01-agent-native-runner/features/: resilience_and_context.feature
src/: shellflow.py
tests/: __init__.py  test_shellflow.py
tests/fixtures/: local_only.sh
