[project]
name = "shellflow"
version = "0.1.0"
description = "A minimal shell script orchestrator with SSH support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = ["paramiko>=3.0.0"]

[project.scripts]
shellflow = "shellflow:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shellflow"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "behave>=1.3.3",
    "hypothesis>=6.151.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
]
asyncio_mode = "auto"
