[project]
name = "shellflow"
version = "0.1.0"
description = "A minimal shell script orchestrator with SSH support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Bob Liu" }]
keywords = ["shell", "ssh", "orchestration", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = ["paramiko>=3.0.0"]

[project.urls]
Homepage = "https://github.com/longcipher/shellflow"
Repository = "https://github.com/longcipher/shellflow"
Issues = "https://github.com/longcipher/shellflow/issues"

[project.scripts]
shellflow = "shellflow:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"src/shellflow.py" = "shellflow.py"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "behave>=1.3.3",
    "hypothesis>=6.151.9",
    "shellflow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
shellflow = { workspace = true, editable = true }
